Added a link to the room

--- a/free_rooms/easy-level/rp_metasploit.mkd
+++ b/free_rooms/easy-level/rp_metasploit.mkd
@@ -1,5 +1,7 @@
+#### Link to the room - https://tryhackme.com/room/rpmetasploit
+
 ##### [Task 1]
-   1. None 
+   1. No answer needed 
    
 ##### [Task 2]
    1. No answer needed
