--- a/subscription_rooms/easy-level/metasploit.mkd
+++ b/subscription_rooms/easy-level/metasploit.mkd
@@ -21,7 +21,12 @@
 #### [Task 4] Privilege Escalation
    1. No answer needed
    2. No answer needed
-   3.
+   3. 2018-12-13 
+> Hint:
+>
+> Once you are in the meterpreter shell, if you type in the command "ls", you should be able to see the contents of the directory 
+>
+> If you look for the information for the "fileupload.php", you should see a date of 2018-12-13
    4. No answer needed
    5. No answer needed
    
@@ -31,6 +36,6 @@
    3. No answer needed
    
 #### [Task 6] Challenges
-   1.
+   1. No
    2. No answer needed
    3. No answer needed
